// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ListItemGroup > styles > should render a ListItemGroup with a custom details line 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.circuit-1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin: 0 16px;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-width: 0;
  margin-bottom: 8px;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-left: 16px;
  margin-bottom: 8px;
}

.circuit-5 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
}

.circuit-6 {
  list-style: none;
}

.circuit-6:not(:first-of-type)>*>div:last-of-type {
  position: relative;
}

.circuit-6:not(:first-of-type)>*>div:last-of-type:before {
  content: '';
  position: absolute;
  top: -12px;
  left: 0;
  right: -16px;
  border-top: 1px solid var(--cui-border-divider);
}

.circuit-7 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-7:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-7:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-7:disabled,
.circuit-7[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-8 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-9 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <h4
        class="_base_537b83 _two_537b83 circuit-3"
      >
        Group label
      </h4>
    </div>
    <div
      class="circuit-4"
    >
      <p
        class="_base_537b83 _two_537b83"
      >
        Group details
      </p>
    </div>
  </div>
  <ul
    class="circuit-5"
  >
    <li
      class="circuit-6"
    >
      <div
        class="circuit-7"
      >
        <div
          class="circuit-8"
        >
          <div
            class="circuit-9"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-3"
            >
              First item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-6"
    >
      <div
        class="circuit-7"
      >
        <div
          class="circuit-8"
        >
          <div
            class="circuit-9"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-3"
            >
              Second item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-6"
    >
      <div
        class="circuit-7"
      >
        <div
          class="circuit-8"
        >
          <div
            class="circuit-9"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-3"
            >
              Third item
            </p>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListItemGroup > styles > should render a ListItemGroup with a custom label 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.circuit-1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin: 0 16px;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-width: 0;
  margin-bottom: 8px;
}

.circuit-3 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
}

.circuit-4 {
  list-style: none;
}

.circuit-4:not(:first-of-type)>*>div:last-of-type {
  position: relative;
}

.circuit-4:not(:first-of-type)>*>div:last-of-type:before {
  content: '';
  position: absolute;
  top: -12px;
  left: 0;
  right: -16px;
  border-top: 1px solid var(--cui-border-divider);
}

.circuit-5 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-5:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-5:focus::-moz-focus-inner {
  border: 0;
}

.circuit-5:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-5:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-5:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-6 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-7 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-8 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <h4
        class="_base_537b83 _two_537b83"
      >
        Group label
      </h4>
    </div>
  </div>
  <ul
    class="circuit-3"
  >
    <li
      class="circuit-4"
    >
      <div
        class="circuit-5"
      >
        <div
          class="circuit-6"
        >
          <div
            class="circuit-7"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-8"
            >
              First item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-4"
    >
      <div
        class="circuit-5"
      >
        <div
          class="circuit-6"
        >
          <div
            class="circuit-7"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-8"
            >
              Second item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-4"
    >
      <div
        class="circuit-5"
      >
        <div
          class="circuit-6"
        >
          <div
            class="circuit-7"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-8"
            >
              Third item
            </p>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListItemGroup > styles > should render a ListItemGroup with a details line 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.circuit-1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin: 0 16px;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-width: 0;
  margin-bottom: 8px;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-left: 16px;
  margin-bottom: 8px;
}

.circuit-5 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
}

.circuit-6 {
  list-style: none;
}

.circuit-6:not(:first-of-type)>*>div:last-of-type {
  position: relative;
}

.circuit-6:not(:first-of-type)>*>div:last-of-type:before {
  content: '';
  position: absolute;
  top: -12px;
  left: 0;
  right: -16px;
  border-top: 1px solid var(--cui-border-divider);
}

.circuit-7 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-7:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-7:focus::-moz-focus-inner {
  border: 0;
}

.circuit-7:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-7:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-7:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-7:disabled,
.circuit-7[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-8 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-9 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <h4
        class="_base_537b83 _two_537b83 circuit-3"
      >
        Group label
      </h4>
    </div>
    <div
      class="circuit-4"
    >
      <p
        class="_base_537b83 _two_537b83"
      >
        Group details
      </p>
    </div>
  </div>
  <ul
    class="circuit-5"
  >
    <li
      class="circuit-6"
    >
      <div
        class="circuit-7"
      >
        <div
          class="circuit-8"
        >
          <div
            class="circuit-9"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-3"
            >
              First item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-6"
    >
      <div
        class="circuit-7"
      >
        <div
          class="circuit-8"
        >
          <div
            class="circuit-9"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-3"
            >
              Second item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-6"
    >
      <div
        class="circuit-7"
      >
        <div
          class="circuit-8"
        >
          <div
            class="circuit-9"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-3"
            >
              Third item
            </p>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListItemGroup > styles > should render a ListItemGroup with a hidden label 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.circuit-1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin: 0 16px;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-width: 0;
  margin-bottom: 8px;
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
}

.circuit-5 {
  list-style: none;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type {
  position: relative;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type:before {
  content: '';
  position: absolute;
  top: -12px;
  left: 0;
  right: -16px;
  border-top: 1px solid var(--cui-border-divider);
}

.circuit-6 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-6:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-6:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-7 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-8 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <h4
        class="_base_537b83 _two_537b83 circuit-3"
      >
        Group label
      </h4>
    </div>
  </div>
  <ul
    class="circuit-4"
  >
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-3"
            >
              First item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-3"
            >
              Second item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-3"
            >
              Third item
            </p>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListItemGroup > styles > should render a ListItemGroup with interactive items 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.circuit-1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin: 0 16px;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-width: 0;
  margin-bottom: 8px;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
}

.circuit-5 {
  list-style: none;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type {
  position: relative;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type:before {
  content: '';
  position: absolute;
  top: -12px;
  left: 0;
  right: -16px;
  border-top: 1px solid var(--cui-border-divider);
}

.circuit-5:hover:not(:first-of-type)>*>div:last-of-type:before,
.circuit-5:hover+li:not(:first-of-type)>*>div:last-of-type:before {
  border-top-width: 0;
}

.circuit-6 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-6:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-6:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-6:hover {
  background-color: var(--cui-bg-normal-hovered);
  border-color: var(--cui-border-subtle-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-6:active {
  background-color: var(--cui-bg-normal-pressed);
  border-color: var(--cui-border-subtle-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-7 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-8 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

<div>
  <div
    class="circuit-0"
  >
    <div
      class="circuit-1"
    >
      <div
        class="circuit-2"
      >
        <h4
          class="_base_537b83 _two_537b83 circuit-3"
        >
          Group label
        </h4>
      </div>
    </div>
    <ul
      class="circuit-4"
    >
      <li
        class="circuit-5"
      >
        <button
          class="circuit-6"
        >
          <div
            class="circuit-7"
          >
            <div
              class="circuit-8"
            >
              <p
                class="_base_537b83 _one_537b83 circuit-3"
              >
                First item
              </p>
            </div>
          </div>
        </button>
      </li>
      <li
        class="circuit-5"
      >
        <button
          class="circuit-6"
        >
          <div
            class="circuit-7"
          >
            <div
              class="circuit-8"
            >
              <p
                class="_base_537b83 _one_537b83 circuit-3"
              >
                Second item
              </p>
            </div>
          </div>
        </button>
      </li>
      <li
        class="circuit-5"
      >
        <button
          class="circuit-6"
        >
          <div
            class="circuit-7"
          >
            <div
              class="circuit-8"
            >
              <p
                class="_base_537b83 _one_537b83 circuit-3"
              >
                Third item
              </p>
            </div>
          </div>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ListItemGroup > styles > should render a plain variant ListItemGroup 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.circuit-1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin: 0 16px;
  margin: 0 calc(16px - 2px);
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-width: 0;
  margin-bottom: 8px;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  border-width: 1px 0;
  border-radius: 0;
}

.circuit-5 {
  list-style: none;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type {
  position: relative;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type:before {
  content: '';
  position: absolute;
  top: -12px;
  left: 0;
  right: -16px;
  border-top: 1px solid var(--cui-border-divider);
}

.circuit-6 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-6:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-6:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-7 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-8 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <h4
        class="_base_537b83 _two_537b83 circuit-3"
      >
        Group label
      </h4>
    </div>
  </div>
  <ul
    class="circuit-4"
  >
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-3"
            >
              First item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-3"
            >
              Second item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-3"
            >
              Third item
            </p>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListItemGroup > styles > should render the focused item in a ListItemGroup with interactive items 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-0:hover {
  background-color: var(--cui-bg-normal-hovered);
  border-color: var(--cui-border-subtle-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-0:active {
  background-color: var(--cui-bg-normal-pressed);
  border-color: var(--cui-border-subtle-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<button
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-3"
      >
        Second item
      </p>
    </div>
  </div>
</button>
`;

exports[`ListItemGroup > styles > should render the inset variant ListItemGroup by default 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.circuit-1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin: 0 16px;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  min-width: 0;
  margin-bottom: 8px;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.circuit-4 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
}

.circuit-5 {
  list-style: none;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type {
  position: relative;
}

.circuit-5:not(:first-of-type)>*>div:last-of-type:before {
  content: '';
  position: absolute;
  top: -12px;
  left: 0;
  right: -16px;
  border-top: 1px solid var(--cui-border-divider);
}

.circuit-6 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-6:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-6:focus::-moz-focus-inner {
  border: 0;
}

.circuit-6:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-6:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-6:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-6:disabled,
.circuit-6[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-7 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-8 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

<div
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <h4
        class="_base_537b83 _two_537b83 circuit-3"
      >
        Group label
      </h4>
    </div>
  </div>
  <ul
    class="circuit-4"
  >
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-3"
            >
              First item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-3"
            >
              Second item
            </p>
          </div>
        </div>
      </div>
    </li>
    <li
      class="circuit-5"
    >
      <div
        class="circuit-6"
      >
        <div
          class="circuit-7"
        >
          <div
            class="circuit-8"
          >
            <p
              class="_base_537b83 _one_537b83 circuit-3"
            >
              Third item
            </p>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ListItemGroup > styles > should render the selected item in a ListItemGroup with interactive items 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  background-color: var(--cui-bg-accent);
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-0:hover {
  background-color: var(--cui-bg-normal-hovered);
  border-color: var(--cui-border-subtle-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-0:active {
  background-color: var(--cui-bg-normal-pressed);
  border-color: var(--cui-border-subtle-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-0:hover,
.circuit-0:active {
  background-color: var(--cui-bg-accent);
}

.circuit-0:after {
  content: '';
  position: absolute;
  top: -2px;
  bottom: -2px;
  left: -2px;
  right: -2px;
  border: 2px solid var(--cui-border-accent);
  border-radius: 16px;
  z-index: 1;
  pointer-events: none;
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<button
  aria-pressed="true"
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-3"
      >
        First item
      </p>
    </div>
  </div>
</button>
`;

exports[`ListItemGroup > styles > should render the selected item in a plain ListItemGroup with interactive items 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  border: 2px solid var(--cui-border-subtle);
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  margin: 0;
  width: 100%;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  cursor: pointer;
  background-color: var(--cui-bg-accent);
  border: none;
  border-radius: calc(16px - 2px);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:focus {
  border-color: transparent;
  z-index: 2;
}

.circuit-0:focus:not(:focus-visible) {
  border-color: var(--cui-border-subtle);
  z-index: auto;
}

.circuit-0:disabled,
.circuit-0[disabled] {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  border-color: var(--cui-border-subtle-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-0:hover {
  background-color: var(--cui-bg-normal-hovered);
  border-color: var(--cui-border-subtle-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-0:active {
  background-color: var(--cui-bg-normal-pressed);
  border-color: var(--cui-border-subtle-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-0:hover,
.circuit-0:active {
  background-color: var(--cui-bg-accent);
}

.circuit-0:after {
  content: '';
  position: absolute;
  top: -2px;
  bottom: -2px;
  left: -2px;
  right: -2px;
  border: 2px solid var(--cui-border-accent);
  border-radius: 16px;
  z-index: 1;
  pointer-events: none;
}

.circuit-0:after {
  top: -1px;
  bottom: -1px;
  left: 0;
  right: 0;
}

.circuit-1 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
}

.circuit-2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  min-width: 0;
}

.circuit-3 {
  max-width: 100%;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<button
  aria-pressed="true"
  class="circuit-0"
>
  <div
    class="circuit-1"
  >
    <div
      class="circuit-2"
    >
      <p
        class="_base_537b83 _one_537b83 circuit-3"
      >
        First item
      </p>
    </div>
  </div>
</button>
`;
